--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -144,5 +144,6 @@
     "Delivery between": "Entrega entre las {date1} del {date2}",
     "Choose a payment method": "Choose a payment method",
     "Size guide lead": "Vous ne connaissez pas votre taille? Notre guide des tailles vous aidera à la trouver!",
-    "Details": "Détails"
+    "Details": "Détails",
+    "Language": "Langue"
 }
