Cleaning + Bug fix

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -147,5 +147,6 @@
     "Choose a payment method": "Choose a payment method",
     "Size guide lead": "Don't know your size? Our size guide help you find the best fit!",
     "Details": "Details",
-    "Language": "Language"
+    "Language": "Language",
+    "Currency": "Currency"
 }
