--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -148,5 +148,6 @@
     "Choose a payment method": "Tipo de pago",
     "Size guide lead": "¿No sabes cuál es tu talla? ¡Nuestra guía de tallas te ayudará a encontrar la que mejor te queda!",
     "Details": "Détails",
-    "Language": "Lengua"
+    "Language": "Lengua",
+    "Currency": "Moneda"
 }
