--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -145,5 +145,6 @@
     "Choose a payment method": "Choose a payment method",
     "Size guide lead": "Vous ne connaissez pas votre taille? Notre guide des tailles vous aidera à la trouver!",
     "Details": "Détails",
-    "Language": "Langue"
+    "Language": "Langue",
+    "Currency": "Monnaie"
 }
