--- a/init.ipynb
+++ b/init.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,8 @@
    ],
    "source": [
     "IMAGES_FOLDER_PATH = pathlib.Path(config_file.get('default', 'images_folder'))\n",
-    "IMAGES_FOLDER_PATH\n"
+    "# TODO: IMAGES = IMAGES_FOLDER_PATH.glob('**/*')\n",
+    "IMAGES_FOLDER_PATH"
    ]
   },
   {
@@ -166,12 +167,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## File collection\n",
     "\n",
-    "Collect all the named images and videos in the images folder. The image's name will be used as the main name for the product that will be created in the databas. In that sense, similar images should have the same base name in order for them to be considered a same product."
+    "Collect all the named images and videos in the images folder. The image's name will be used for the product's name. In that sense, similar images should have the same name in order for them to be considered the same product."
    ]
   },
   {
@@ -195,7 +197,26 @@
     "            \n",
     "            return pathlib.Path(full_path), images, videos\n",
     "    print('Collected', 0, 'images and', 0, 'videos')\n",
-    "    return None, [], []\n"
+    "    return None, [], []\n",
+    "\n",
+    "\n",
+    "# TODO: Use Pathlib\n",
+    "# def collect_files():\n",
+    "#     images = []\n",
+    "#     videos = []\n",
+    "\n",
+    "#     for file in IMAGES:\n",
+    "#         if not file.is_file():\n",
+    "#             continue\n",
+    "\n",
+    "#         if file.name.endswith('jpeg'):\n",
+    "#             images.append(file)\n",
+    "        \n",
+    "#         if file.name.endswith('mp4'):\n",
+    "#             videos.append(file)\n",
+    "\n",
+    "#     print('Collected', len(images), 'images and', len(videos), 'videos')\n",
+    "#     return images, videos"
    ]
   },
   {
@@ -444,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
