--- a/frontend_store/src/locales/es-ES.json
+++ b/frontend_store/src/locales/es-ES.json
@@ -9,5 +9,6 @@
     "Ajouter au panier": "Ajouter au panier",
     "Livraison gratuite offerte": "Il te manque {n} pour profiter de la",
     "Se connecter": "Se connecter",
-    "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée"
+    "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée",
+    "Cela peut t'intéresser": "Cela peut t'intéresser"
 }
