--- a/frontend_store/src/locales/en-US.json
+++ b/frontend_store/src/locales/en-US.json
@@ -10,5 +10,6 @@
     "Livraison gratuite offerte": "Il te manque {n} pour profiter de la",
     "Se connecter": "Se connecter",
     "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée",
-    "Produits trouvés": "0 produits trouvés | 1 produit trouvé | {count} produits trouvés"
+    "Produits trouvés": "0 produits trouvés | 1 produit trouvé | {count} produits trouvés",
+    "Cela peut t'intéresser": "Cela peut t'intéresser"
 }
