--- a/init.ipynb
+++ b/init.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "['project.ini']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "'True'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,106 +221,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_media_name(name):\n",
-    "    \"\"\"Detects the true name of the media file\"\"\"\n",
-    "    if isinstance(name, pathlib.WindowsPath):\n",
-    "        name = unquote(str(name.stem))\n",
-    "        return name\n",
-    "    else:\n",
-    "        result = re.match(r'(\\w.*)(?=\\(\\d+\\))', name)\n",
-    "        if result is not None:\n",
-    "            return result.group(0).strip().lower()\n",
-    "    return get_random_string(10)"
+    "df = pandas.read_json(BASE_DIR / 'products_smky8.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_product_fixtures(model_dotted_path=None, create_fixture=False):\n",
-    "    with open(BASE_DIR / 'fixtures.json', mode='w', encoding='utf-8') as f:\n",
-    "        products = []\n",
-    "        fixtures = []\n",
-    "\n",
-    "        images, videos = collect_files()\n",
-    "        \n",
-    "        # Products created from image files\n",
-    "        # names = set(map(detect_media_name, images))\n",
-    "\n",
-    "        with open(BASE_DIR / 'products_smky8.json', mode='r', encoding='utf-8') as b:\n",
-    "            data = json.load(b)\n",
-    "            names = list(map(lambda x: x['name'], data))\n",
-    "\n",
-    "        timzone = pytz.timezone('America/Chicago')\n",
-    "        current_date = str(datetime.datetime.now(tz=timzone).date())\n",
-    "        \n",
-    "        for i, name in enumerate(names):\n",
-    "            if name is not None:\n",
-    "                color = str(random.choice(ColorChoices.choices)[0])\n",
-    "                \n",
-    "                product = {\n",
-    "                    'name': name.title(),\n",
-    "                    'color': color,\n",
-    "                    'unit_price': random.randrange(10, 800),\n",
-    "                    'active': False,\n",
-    "                    'display_new': random.choice([True, False]),\n",
-    "                    'slug': create_slug(f'{name}-{i}', color),\n",
-    "                    'category': str(random.choice(CategoryChoices.choices)[0]),\n",
-    "                    'created_on': current_date,\n",
-    "                    'modified_on': current_date\n",
-    "                }\n",
-    "\n",
-    "                is_on_sale = random.choice([True, False])\n",
-    "                product['on_sale'] = is_on_sale\n",
-    "                if is_on_sale:\n",
-    "                    product['sale_value'] = random.randrange(10, 50)\n",
-    "                else:\n",
-    "                    product['sale_value'] = 0\n",
-    "                \n",
-    "                if create_fixture:\n",
-    "                    if model_dotted_path is None:\n",
-    "                        raise ValueError('Fixtures require a model path e.g. app.MyModel')\n",
-    "                    \n",
-    "                    fixtures.extend({\n",
-    "                        'pk': i + 1,\n",
-    "                        'model': model_dotted_path,\n",
-    "                        'fields': product\n",
-    "                    })\n",
-    "\n",
-    "                    json.dump(fixtures, f)\n",
-    "                    print('Created', len(names), 'products')\n",
-    "                else:\n",
-    "                    products.append(product)\n",
-    "        return products"
+    "df = df[['name', 'color', 'price', 'id_or_reference']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRODUCTS = create_product_fixtures(model_dotted_path='shop.Product', create_fixture=False)"
+    "df = df.sort_values('name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pandas.DataFrame(PRODUCTS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,11 +257,17 @@
     "        'LanièRes': 'Lanières',\n",
     "        'PlisséE': 'Plissée',\n",
     "        'ParéO': 'Paréo',\n",
+    "        'ImpriméE': 'Imprimée',\n",
+    "        'GaufréE': 'Gaufrée',\n",
+    "        'TexturéE': 'Texturée',\n",
+    "        'DéTail': 'Détail',\n",
+    "        'SatinéE': 'Satinée',\n",
     "        'ChinéE': 'Chinée',\n",
+    "        'ÉLastiquéE': 'Élastiquée',\n",
     "        'ÉLastique': 'Élastique',\n",
     "        'RetrousséE': 'Retrousée'\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    clean_tokens = []\n",
     "    for token in str(value).split(' '):\n",
     "        if token in tokens:\n",
@@ -342,21 +276,13 @@
     "        clean_tokens.append(token)\n",
     "    return ' '.join(clean_tokens)\n",
     "\n",
+    "\n",
     "df.name = df.name.apply(fix_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.get(['name', 'color', 'unit_price', 'active', 'display_new', 'slug', 'category', 'on_sale', 'sale_value'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -382,89 +308,271 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>color</th>\n",
-       "      <th>unit_price</th>\n",
-       "      <th>active</th>\n",
-       "      <th>display_new</th>\n",
-       "      <th>slug</th>\n",
-       "      <th>category</th>\n",
-       "      <th>on_sale</th>\n",
-       "      <th>sale_value</th>\n",
+       "      <th>price</th>\n",
+       "      <th>id_or_reference</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jupe Midi Popeline Taille Élastique</td>\n",
-       "      <td>Yellow</td>\n",
-       "      <td>337</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>jupe-midi-popeline-taille-elastique-0-yellow</td>\n",
-       "      <td>Activewear</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Minijupe Cargo Serge Ceinture</td>\n",
-       "      <td>Camel</td>\n",
-       "      <td>710</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>minijupe-cargo-serge-ceinture-1-camel</td>\n",
-       "      <td>Bags</td>\n",
-       "      <td>True</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jupe-Culotte Paréo Plissée</td>\n",
+       "      <th>84</th>\n",
+       "      <td>Jupe cargo lanières</td>\n",
        "      <td>Red</td>\n",
-       "      <td>57</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>jupe-culotte-pareo-plissee-2-red</td>\n",
-       "      <td>Pants</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>1062/335/428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Jupe cargo lanières</td>\n",
+       "      <td>Pink</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>1062/335/800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Jupe cargo lanières</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>1062/335/800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Jupe cargo lanières</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>1062/335/428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Jupe culotte en denim</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>25.99</td>\n",
+       "      <td>3194/352/800</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  name   color  unit_price  active  \\\n",
-       "0  Jupe Midi Popeline Taille Élastique  Yellow         337   False   \n",
-       "1        Minijupe Cargo Serge Ceinture   Camel         710   False   \n",
-       "2           Jupe-Culotte Paréo Plissée     Red          57   False   \n",
-       "\n",
-       "   display_new                                          slug    category  \\\n",
-       "0         True  jupe-midi-popeline-taille-elastique-0-yellow  Activewear   \n",
-       "1         True         minijupe-cargo-serge-ceinture-1-camel        Bags   \n",
-       "2        False              jupe-culotte-pareo-plissee-2-red       Pants   \n",
-       "\n",
-       "   on_sale  sale_value  \n",
-       "0    False           0  \n",
-       "1     True          42  \n",
-       "2    False           0  "
+       "                     name  color  price id_or_reference\n",
+       "84   Jupe cargo lanières    Red  29.99    1062/335/428\n",
+       "9    Jupe cargo lanières   Pink  29.99    1062/335/800\n",
+       "46   Jupe cargo lanières  Black  29.99    1062/335/800\n",
+       "51   Jupe cargo lanières   Blue  29.99    1062/335/428\n",
+       "76  Jupe culotte en denim   Blue  25.99    3194/352/800"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(n=3)"
+    "df.head(n=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('products.csv', index=False)"
+    "df.index = range(1, df.shape[0] + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>price</th>\n",
+       "      <th>id_or_reference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Minijupe en crochet</td>\n",
+       "      <td>Beige</td>\n",
+       "      <td>17.99</td>\n",
+       "      <td>1091/169/712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Minijupe taille retroussée</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>1234/019/800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Minijupe taille retroussée</td>\n",
+       "      <td>Print</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>1234/019/268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>Minijupe taille retroussée</td>\n",
+       "      <td>White</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>1234/019/251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Minijupe taille retroussée</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>1234/019/800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           name  color  price id_or_reference\n",
+       "65          Minijupe en crochet  Beige  17.99    1091/169/712\n",
+       "77  Minijupe taille retroussée  Black  15.99    1234/019/800\n",
+       "79  Minijupe taille retroussée  Print  15.99    1234/019/268\n",
+       "80  Minijupe taille retroussée  White  15.99    1234/019/251\n",
+       "81  Minijupe taille retroussée  Black  15.99    1234/019/800"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.duplicated(subset=['name', 'color', 'id_or_reference'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_media_name(name):\n",
+    "    \"\"\"Detects the true name of the media file\"\"\"\n",
+    "    if isinstance(name, pathlib.WindowsPath):\n",
+    "        name = unquote(str(name.stem))\n",
+    "        return name\n",
+    "    else:\n",
+    "        result = re.match(r'(\\w.*)(?=\\(\\d+\\))', name)\n",
+    "        if result is not None:\n",
+    "            return result.group(0).strip().lower()\n",
+    "    return get_random_string(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_product_fixtures(model_dotted_path=None, create_fixture=False):\n",
+    "    with open(BASE_DIR / 'fixtures.json', mode='w', encoding='utf-8') as f:\n",
+    "        products = []\n",
+    "        fixtures = []\n",
+    "\n",
+    "        # images, videos = collect_files()\n",
+    "        \n",
+    "        # Products created from image files\n",
+    "        # names = set(map(detect_media_name, images))\n",
+    "\n",
+    "        # with open(BASE_DIR / 'products_smky8.json', mode='r', encoding='utf-8') as b:\n",
+    "        #     data = json.load(b)\n",
+    "        #     names = list(map(lambda x: (x['name'], x['color'], x['price']), data))\n",
+    "\n",
+    "        timzone = pytz.timezone('America/Chicago')\n",
+    "        current_date = str(datetime.datetime.now(tz=timzone).date())\n",
+    "        \n",
+    "        # for i, item in enumerate(names):\n",
+    "        for item in df.itertuples(name='Product'):            \n",
+    "            product = {\n",
+    "                'name': item.name,\n",
+    "                'color': item.color,\n",
+    "                'unit_price': item.price,\n",
+    "                # 'sku': item.id_or_reference,\n",
+    "                'active': False,\n",
+    "                'display_new': random.choice([True, False]),\n",
+    "                'slug': create_slug(item.name, item.Index, item.color),\n",
+    "                'category': 'Skirts',\n",
+    "                'sub_category': 'Not attributed',\n",
+    "                'created_on': current_date,\n",
+    "                'modified_on': current_date\n",
+    "            }\n",
+    "\n",
+    "            is_on_sale = random.choice([True, False])\n",
+    "            product['on_sale'] = is_on_sale\n",
+    "            if is_on_sale:\n",
+    "                product['sale_value'] = random.randrange(10, 50)\n",
+    "            else:\n",
+    "                product['sale_value'] = 0\n",
+    "            \n",
+    "            if create_fixture:\n",
+    "                if model_dotted_path is None:\n",
+    "                    raise ValueError('Fixtures require a model path e.g. app.MyModel')\n",
+    "                \n",
+    "                fixtures.extend({\n",
+    "                    'pk': item.Index,\n",
+    "                    'model': model_dotted_path,\n",
+    "                    'fields': product\n",
+    "                })\n",
+    "\n",
+    "                json.dump(fixtures, f)\n",
+    "            products.append(product)\n",
+    "        return products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRODUCTS = create_product_fixtures(model_dotted_path='shop.Product', create_fixture=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = pandas.DataFrame(PRODUCTS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products.to_csv('products.csv', index=True, index_label='id')"
    ]
   },
   {
