--- a/frontend_store/src/locales/es-ES.json
+++ b/frontend_store/src/locales/es-ES.json
@@ -10,5 +10,7 @@
     "Livraison gratuite offerte": "Il te manque {n} pour profiter de la",
     "Se connecter": "Se connecter",
     "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée",
-    "Cela peut t'intéresser": "Cela peut t'intéresser"
+    "Produits trouvés": "0 produits trouvés | 1 produit trouvé | {count} produits trouvés",
+    "Cela peut t'intéresser": "Cela peut t'intéresser",
+    "Choisis un mode d'expédition": "Choisis un mode d'expédition"
 }
