--- a/frontend_store/src/locales/en-US.json
+++ b/frontend_store/src/locales/en-US.json
@@ -11,5 +11,6 @@
     "Se connecter": "Se connecter",
     "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée",
     "Produits trouvés": "0 produits trouvés | 1 produit trouvé | {count} produits trouvés",
-    "Cela peut t'intéresser": "Cela peut t'intéresser"
+    "Cela peut t'intéresser": "Cela peut t'intéresser",
+    "Choisis un mode d'expédition": "Choisis un mode d'expédition"
 }
