Restructuring of the cart system

--- a/frontend_store/src/locales/en-US.json
+++ b/frontend_store/src/locales/en-US.json
@@ -12,5 +12,15 @@
     "Conservations des favoris": "Tes favoris seront conservés pour une durée limitée",
     "Produits trouvés": "0 produits trouvés | 1 produit trouvé | {count} produits trouvés",
     "Cela peut t'intéresser": "Cela peut t'intéresser",
-    "Choisis un mode d'expédition": "Choisis un mode d'expédition"
+    "Choisis un mode d'expédition": "Choisis un mode d'expédition",
+    "Enregistrer": "Enregistrer",
+    "Modifier": "Modifier",
+    "Voir le panier": "Voir le panier",
+    "Passer commande": "Passer commande",
+    "Ajouté au panier": "Ajouté au panier",
+    "Connecte-toi ou crée un compte": "Connecte-toi ou crée un compte",
+    "Autres produits": "Autres produits",
+    "Découvrir": "Découvrir",
+    "Panier vide": "Panier vide",
+    "Livraison standard gratuite": "Livraison standard gratuite"
 }
