--- a/frontend_store/src/locales/fr-FR.json
+++ b/frontend_store/src/locales/fr-FR.json
@@ -22,5 +22,7 @@
     "Autres produits": "Autres produits",
     "Découvrir": "Découvrir",
     "Panier vide": "Panier vide",
-    "Livraison standard gratuite": "Livraison standard gratuite"
+    "Livraison standard gratuite": "Livraison standard gratuite",
+    "Couleur": "Couleur",
+    "Quantité": "Quantité"
 }
