--- a/frontend_store/src/locales/es-ES.json
+++ b/frontend_store/src/locales/es-ES.json
@@ -24,5 +24,6 @@
     "Panier vide": "Panier vide",
     "Livraison standard gratuite": "Livraison standard gratuite",
     "Couleur": "Couleur",
-    "Quantité": "Quantité"
+    "Quantité": "Quantité",
+    "Conservation des favoris": "Conservation des favoris"
 }
