--- a/frontend_store/src/locales/en-US.json
+++ b/frontend_store/src/locales/en-US.json
@@ -25,5 +25,6 @@
     "Livraison standard gratuite": "Livraison standard gratuite",
     "Couleur": "Couleur",
     "Quantité": "Quantité",
-    "Conservation des favoris": "Conservation des favoris"
+    "Conservation des favoris": "Conservation des favoris",
+    "Afficher tout": "Afficher tout"
 }
