--- a/frontend_store/src/locales/en-US.json
+++ b/frontend_store/src/locales/en-US.json
@@ -26,5 +26,12 @@
     "Couleur": "Couleur",
     "Quantité": "Quantité",
     "Conservation des favoris": "Conservation des favoris",
-    "Afficher tout": "Afficher tout"
+    "Afficher tout": "Afficher tout",
+    "Sélectionnez votre emplacement": "Sélectionnez votre emplacement",
+    "Condition général d'achat": "Condition général d'achat",
+    "Politique de confidentialité": "Politique de confidentialité",
+    "Mention légal": "Mention légal",
+    "Sitemap": "Sitemap",
+    "Sélectionnez votre langue": "Sélectionnez votre langue",
+    "Enregistrer mon choix": "Enregistrer mon choix"
 }
