--- a/frontend_store/src/locales/fr-FR.json
+++ b/frontend_store/src/locales/fr-FR.json
@@ -42,5 +42,6 @@
     "Total (TVA comprise)": "Total (TVA comprise)",
     "Empty cart text": "Ton panier est encore vide, découvre tout ce que nous avons pour toi",
     "Page not available text": "Cette page n'est pas disponible, mais nous en avons beaucoup d'autres à te montrer",
-    "Haut de page": "Haut de page"
+    "Haut de page": "Haut de page",
+    "Keep favorites text": "Crée un compte ou connecte-toi si tu en as déjà un et nous conserverons tes favoris pour que tu puisses les voir sur des dispositifs différents"
 }
