--- a/frontend_store/src/locales/fr-FR.json
+++ b/frontend_store/src/locales/fr-FR.json
@@ -48,5 +48,8 @@
     "Frais d'envoi": "Frais d'envoi",
     "Gratuit": "Gratuit",
     "Boutique": "Boutique",
-    "Payer somme": "Payer ({n})"
+    "Payer somme": "Payer ({n})",
+    "Voir plus de produits": "Voir plus de produits",
+    "Prix croissant": "Prix croissant",
+    "Prix décroissant": "Prix décroissant"
 }
