Improve TS files

--- a/shop_store_ts/src/locales/fr-FR.json
+++ b/shop_store_ts/src/locales/fr-FR.json
@@ -53,5 +53,29 @@
     "Prix croissant": "Prix croissant",
     "Prix décroissant": "Prix décroissant",
     "Adresse de livraison": "Adresse de livraison",
-    "Paiement": "Paiement"
+    "Paiement": "Paiement",
+    "Composition, soin et traçabilité": "Composition, soin et traçabilité",
+    "Comprendre tes mesures ?": "Comprendre tes mesures ?",
+    "Tour de Poitrine": "Tour de Poitrine",
+    "Tour de Taille": "Tour de Taille",
+    "Inscris-toi": "Inscris-toi",
+    "Composition": "Composition",
+    "Livraison": "Livraison",
+    "Dans le magasin de votre choix": "Dans le magasin de votre choix",
+    "Retour en point relais": "Retour en point relais",
+    "Remboursement": "Remboursement",
+    "Livraison et retour": "Livraison et retour",
+    "Corps": "Corps",
+    "Mensurations": "Mensurations",
+    "Ne peuvent être ni échangés ni retournés": "Ne peuvent être ni échangés ni retournés",
+    "Sélectionne une taille": "Sélectionne une taille",
+    "Livraison en magasin GRATUITE": "Livraison en magasin GRATUITE",
+    "Tour de Hanches": "Tour de Hanches",
+    "Contact": "Contact",
+    "Get connected with us on social networks": "Get connected with us on social networks",
+    "Voir toute la collection": "Voir toute la collection",
+    "Typologie": "Typologie",
+    "Filtrer": "Filtrer",
+    "Supprimer": "Supprimer",
+    "Prix": "Prix"
 }
