--- a/shop_store_ts/src/locales/en-US.json
+++ b/shop_store_ts/src/locales/en-US.json
@@ -77,5 +77,8 @@
     "Typologie": "Typologie",
     "Filtrer": "Filtrer",
     "Supprimer": "Supprimer",
-    "Prix": "Prix"
+    "Prix": "Prix",
+    "en 2-4 jours ouvrables": "en 2-4 jours ouvrables",
+    "Nouveautés": "Nouveautés",
+    "Sélectionne la taille": "Sélectionne la taille"
 }
